# source2-asset-assembler

./: .gitignore  pyproject.toml
source2_asset_assembler/: __init__.py  assetbuilder.py
